# foggypark

./: .env.example  README.md  agent.py  app.py  hypermode_llm.py  main.py  pyproject.toml  weaviate_indexer.py
sample/: complete-data.json  data.json  datav3.json
